--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ project(":desktop") {
         implementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        
+        implementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
     }
 }
 
@@ -66,7 +66,9 @@ project(":html") {
         api "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
         api "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
         api "com.google.jsinterop:jsinterop-annotations:2.0.2:sources"
-        
+        implementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+
+
     }
 }
 
@@ -76,6 +78,6 @@ project(":core") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
-        
+        implementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
     }
 }
