change java version in gradle build

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,6 +1,6 @@
 java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
     [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
     sourceSets.test.java.srcDirs = [ "src/" ]
