Add UML generation gradle command

--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,19 @@ buildscript {
         mavenCentral()
         gradlePluginPortal()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://plugins.gradle.org/m2/" }
         google()
     }
     dependencies {
         classpath 'org.docstr:gwt-gradle-plugin:1.1.29'
         classpath 'org.gretty:gretty:3.1.0'
+        classpath 'io.gitlab.plunts:plantuml-gradle-plugin:2.1.7'
     }
 }
 
 allprojects {
     apply plugin: "eclipse"
+    apply plugin: "io.gitlab.plunts.plantuml"
 
     version = '1.0'
     ext {
@@ -40,6 +43,7 @@ allprojects {
 
 project(":desktop") {
     apply plugin: "java-library"
+
 
     dependencies {
         implementation project(":core")
